window singleton class + cmake reorg
Implemented the window singleton class and cleaned up the main function

CMake now uses a tree structure for each directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,28 @@
 cmake_minimum_required(VERSION 3.16)
 
 set (PROJECT_NAME "ProcGen")
-set (LIBRARIES_PATH "lib")
+set(LIBRARIES_PATH "${CMAKE_SOURCE_DIR}/lib")
 
 project(${PROJECT_NAME} VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add the main executable
-add_executable(${PROJECT_NAME}
-    src/main.cpp
-)
-target_include_directories(${PROJECT_NAME} PRIVATE src)
-
 # Find and link OpenGL
 find_package(OpenGL REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE freeglut_static ${OPENGL_LIBRARIES})
 
-# Add libs
-add_subdirectory(
-    ${LIBRARIES_PATH}/freeglut
-    ${LIBRARIES_PATH}/glm)
+# Set global output directory for all executables to root build directory
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-# Include lib headers
-target_include_directories(
-    ${PROJECT_NAME} PRIVATE ${LIBRARIES_PATH}/freeglut/include
-    ${PROJECT_NAME} PRIVATE ${LIBRARIES_PATH}/glm/glm)
+# Include lib headers (must be defined BEFORE add_subdirectory)
+set(LIBRARY_INCLUDE_DIRS
+    ${LIBRARIES_PATH}/freeglut/include
+    ${LIBRARIES_PATH}/glm/glm
+)
+
+# Include directories globally for all subdirectories
+include_directories(${LIBRARY_INCLUDE_DIRS})
+
+# Add libraries and subdirectories
+add_subdirectory(${LIBRARIES_PATH}/freeglut)
+add_subdirectory(${LIBRARIES_PATH}/glm)
+add_subdirectory(src)
