--- a/src/view/CMakeLists.txt
+++ b/src/view/CMakeLists.txt
@@ -3,11 +3,13 @@ add_library(view window.cpp)
 
 # Link libraries required by the view module
 target_link_libraries(view PRIVATE
+    controller
     freeglut_static
     ${OPENGL_LIBRARIES}
 )
 
 # Include directories for this library
-target_include_directories(view PRIVATE
+target_include_directories(view PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
     ${LIBRARY_INCLUDE_DIRS}
 )
