--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,14 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC
     view
     controller
-    ### model
+    scene
     ${LIBRARY_INCLUDE_DIRS}
 )
 
 # Add subdirectories
 add_subdirectory(view)
 add_subdirectory(controller)
-### add_subdirectory(model)
+add_subdirectory(scene)
 
 # Link libraries and dependencies to the main executable
 target_link_libraries(${PROJECT_NAME} PRIVATE
