--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,10 +1,11 @@
 # Create a library for the scene module
-add_library(scene scene.cpp game_scene.cpp)
+add_library(scene scene.cpp game_scene.cpp camera.cpp)
 
 # Link libraries required by the scene module
-target_link_libraries(scene PRIVATE
+target_link_libraries(scene PUBLIC
     view
     freeglut_static
+    glm
     ${OPENGL_LIBRARIES}
 )
 
