--- a/src/view/CMakeLists.txt
+++ b/src/view/CMakeLists.txt
@@ -2,16 +2,18 @@
 add_library(view window.cpp)
 
 # Link libraries required by the view module
+target_link_libraries(view PUBLIC
+    freeglut_static
+)
 target_link_libraries(view PRIVATE
     controller
     scene
-    freeglut_static
     glm
+    glad
     ${OPENGL_LIBRARIES}
 )
 
 # Include directories for this library
 target_include_directories(view PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${LIBRARY_INCLUDE_DIRS}
 )
