--- a/src/view/CMakeLists.txt
+++ b/src/view/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(view window.cpp shader.cpp texture.cpp)
 
 # Link libraries required by the view module
 target_link_libraries(view PUBLIC
-    freeglut_static
+    glfw
 )
 target_link_libraries(view PRIVATE
     controller
