render multiple chunks
Need to use EBO to speed up rendering + more optimizations

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Create a library for the game module
 add_library(game game_scene.cpp block_factory.cpp block.cpp block_texture_map.h chunk.cpp)
 target_compile_definitions(game PRIVATE TEXTURES_PATH="${ASSETS_PATH}/textures")
+target_compile_definitions(game PRIVATE VERTEX_POS_LOCATION=0)
+target_compile_definitions(game PRIVATE TEX_COORD_LOCATION=1)
+target_compile_definitions(game PRIVATE TEX_LAYER_LOCATION=2)
 
 # Link libraries required by the game module
 target_link_libraries(game PRIVATE
