--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,8 @@
         "semaphore": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     }
 }
