--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,8 @@
         "thread": "cpp",
         "shared_mutex": "cpp",
         "set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "queue": "cpp",
+        "ranges": "cpp"
     }
 }
