--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/glfw"]
 	path = lib/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "lib/FastNoise2"]
+	path = lib/FastNoise2
+	url = https://github.com/Auburn/FastNoise2.git
