--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,8 @@ set(LIBRARY_INCLUDE_DIRS
     ${LIBRARIES_PATH}/glfw/include
     ${LIBRARIES_PATH}/glm/glm
     ${LIBRARIES_PATH}/glad/include
-    ${LIBRARIES_PATH}/stb)
+    ${LIBRARIES_PATH}/stb
+    ${LIBRARIES_PATH}/FastNoise2/include/FastNoise)
 
 # Include directories globally for all subdirectories
 include_directories(${LIBRARY_INCLUDE_DIRS})
@@ -36,4 +37,5 @@ add_subdirectory(${LIBRARIES_PATH}/glfw)
 add_subdirectory(${LIBRARIES_PATH}/glm)
 add_subdirectory(${LIBRARIES_PATH}/glad)
 add_subdirectory(${LIBRARIES_PATH}/stb)
+add_subdirectory(${LIBRARIES_PATH}/FastNoise2)
 add_subdirectory(src)
